fix:fixed resume analysis

--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
         "dev": "npm run dev --workspaces",
         "build": "npm run build --workspaces",
         "install-all": "npm install && npm install --workspace=frontend && npm install --workspace=backend"
+    },
+    "dependencies": {
+        "@clerk/themes": "^2.4.47",
+        "openai": "^6.21.0"
     }
 }
