--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,10 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0",
-        "react-router-dom": "^6.20.1"
+        "react-router-dom": "^6.30.3"
     },
     "devDependencies": {
+        "@types/react": "^19.2.8",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.23",
         "postcss": "^8.5.6",
