--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.3",
         "multer": "^1.4.5-lts.1",
+        "openai": "^6.21.0",
         "pdf-parse": "^1.1.1"
     },
     "devDependencies": {
